# breeze

./: .prettierignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  components.json  eslint.config.mjs  install.sh  package.json  proxy.ts
.claude/: CLAUDE.md
app/: globals.css  landing-sections.tsx  layout.tsx  manifest.ts  page.tsx
app/[auth]/: page.tsx
app/actions/: auth.ts
app/chat/: layout.tsx  page.client.tsx  page.tsx
backend/: README.md  app.py  chat.py  config.py  models.py  models_config.py  pyproject.toml  settings.py  tools.py
components/: Input.tsx  app-sidebar.tsx  global-shortcuts.tsx  login-form.tsx  nav-conversations.tsx  nav-main.tsx  nav-user.tsx  providers.tsx  signup-form.tsx  theme-switch.tsx
components/ai-elements/: agent.tsx  artifact.tsx  attachments.tsx  audio-player.tsx  canvas.tsx  chain-of-thought.tsx  checkpoint.tsx  code-block.tsx  commit.tsx  confirmation.tsx  context.tsx  controls.tsx  conversation.tsx  edge.tsx  environment-variables.tsx  file-tree.tsx  image.tsx  inline-citation.tsx  jsx-preview.tsx  message.tsx  mic-selector.tsx  model-selector.tsx  node.tsx  open-in-chat.tsx  package-info.tsx  panel.tsx  plan.tsx  prompt-input.tsx  queue.tsx  reasoning.tsx  sandbox.tsx  schema-display.tsx  shimmer.tsx  snippet.tsx  sources.tsx  speech-input.tsx  stack-trace.tsx  suggestion.tsx  task.tsx  terminal.tsx  (+6 more)
hooks/: use-chat-messages.ts  use-conversations.ts  use-copy-to-clipboard.tsx  use-ctrl-shortcuts.ts  use-mobile.ts  use-search.ts
lib/: auth.ts  env.ts
public/: sw.js
store/: chat.ts
types/: next-auth.d.ts
(+60 files in other folders)
